--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="project">
                 <img src="https://github.com/harshitv804/LawGPT/assets/100853494/ecff5d3c-f105-4ba2-a93a-500282f0bf00" alt="LawGPT">
                 <div class="project-content">
-                    <h3><a href="#">LawGPT: RAG based Generative AI Attorney Chatbot</a></h3>
+                    <h3><a href="https://github.com/harshitv804/LawGPT">LawGPT: RAG based Generative AI Attorney Chatbot</a></h3>
                     <p>LawGPT is an AI attorney chatbot built with Streamlit, LangChain, and TogetherAI, trained on Indian Penal Code (IPC) data. Ask any legal questions, and it will provide accurate justice based on the IPC.</p>
                     <div class="links">
-                        <a href="https://github.com/harshitv804/LawGPT">Code</a> / <a href="https://huggingface.co/spaces/harshitv804/LawGPT">Demo</a>
+                        <a href="https://github.com/harshitv804/LawGPT">Source Code</a> / <a href="https://huggingface.co/spaces/harshitv804/LawGPT">Demo</a>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="project">
                 <img src="https://github.com/harshitv804/RAG-without-Vector-DB/assets/100853494/cebecf35-bdd6-459c-8a1e-bad7c9a8037b" alt="RAGLess">
                 <div class="project-content">
-                    <h3><a href="#">RAG without Vector-DB? - Yes</a></h3>
+                    <h3><a href="https://github.com/harshitv804/RAG-without-Vector-DB">RAG without Vector-DB? - Yes</a></h3>
                     <p>This project breaks away from traditional methods using embeddings and vector databases by employing a TF-IDF retriever, long context reordering, and a flash reranker. This approach improves retrieval speed with k=8 while maintaining accuracy comparable to vector databases.
                     </p>
                     <div class="links">
@@ -59,7 +59,7 @@
             <div class="project">
                 <img src="https://github.com/harshitv804/MedChat/assets/100853494/86b9efcc-32cd-42ae-a2ce-90e5c6c0401e" alt="MedChat">
                 <div class="project-content">
-                    <h3><a href="#">MedChat - RAG based AI Chatbot for 🇮🇳 Medicines</a></h3>
+                    <h3><a href="https://github.com/harshitv804/MedChat">MedChat - RAG based AI Chatbot for 🇮🇳 Medicines</a></h3>
                     <p>MedChat is a RAG-based AI chatbot for inquiries about Indian medicines. Built with Streamlit, LangChain, and Mistral LLM, it uses open web data on Indian medicines to provide accurate responses to user questions about medications.
                     </p>
                     <div class="links">
@@ -71,7 +71,7 @@
             <div class="project">
                 <img src="https://github.com/user-attachments/assets/e722059e-02e6-441e-8bbc-69c79bbddcd3" alt="Time Series LSTM">
                 <div class="project-content">
-                    <h3><a href="#">Time Series Forecasting LSTM Streamlit</a></h3>
+                    <h3><a href="https://github.com/harshitv804/Time-Series-Forecasting-LSTM-Streamlit">Time Series Forecasting LSTM Streamlit</a></h3>
                     <p>Time Series Forecasting based on Streamlit GUI. Featuring pre-built data processing, correlation visualization, and customizable models, it supports both univariate and multivariate forecasts. Supports customizable LSTM features and interactive Plotly graphs.
                     </p>
                     <div class="links">
