--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="header-content">
                 <h1>Harshit V</h1>
-                <p>I'm a Tech enthusiast skilled in Generative AI, Machine Learning, and WordPress development. I love making projects and becoming a Mid-Polymath is the endgoal of my life I guess.</p><br>
+                <p>I'm a Tech enthusiast skilled in Generative AI, Machine Learning, and WordPress development. I love developing projects and becoming a mid-polymath is the end-goal of my life I guess.</p><br>
                 <p>Previously Interned at <a href="https://gameplantribe.com/" style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as WordPress Freelancer, <a href="https://www.pragrobotics.com/" style="text-decoration: underline;text-decoration-color: orange;">Prag Robotics</a> as Machine Learning Engineer. I did my B.Tech in AI/ML at <a href="https://srmrmp.edu.in/" style="text-decoration: underline;text-decoration-color: orange;">SRM University</a> Ramapuram, Chennai.</p>
                 <div class="links">
                     <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> / 
