--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 <p>I'm a Tech enthusiast skilled in Generative AI, Machine Learning, and WordPress development. I love developing projects and becoming a mid-polymath is the end-goal of my life I guess.</p><br>
                 <p>Previously Interned at <a href="https://gameplantribe.com/" style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as WordPress Freelancer, <a href="https://www.pragrobotics.com/" style="text-decoration: underline;text-decoration-color: orange;">Prag Robotics</a> as Machine Learning Engineer. I did my B.Tech in AI/ML at <a href="https://srmrmp.edu.in/" style="text-decoration: underline;text-decoration-color: orange;">SRM University</a> Ramapuram, Chennai.</p>
                 <div class="links">
-                    <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> / 
-                    <a href="#">CV</a> / 
+                    <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> /
                     <a href="https://www.linkedin.com/in/harshitv804/">LinkedIn</a> / 
                     <a href="https://huggingface.co/harshitv804">HuggingFace</a> / 
                     <a href="https://github.com/harshitv804">Github</a>
@@ -63,7 +62,7 @@
                     <p>MedChat is a RAG-based AI chatbot for inquiries about Indian medicines. Built with Streamlit, LangChain, and Mistral LLM, it uses open web data on Indian medicines to provide accurate responses to user questions about medications.
                     </p>
                     <div class="links">
-                    <a href="https://github.com/harshitv804/MedChat">Source Code</a> / <a href="https://https://huggingface.co/spaces/harshitv804/MedChat">Demo</a>
+                    <a href="https://github.com/harshitv804/MedChat">Source Code</a> / <a href="https://huggingface.co/spaces/harshitv804/MedChat">Demo</a>
                     </div>
                 </div>
             </div>
