--- a/index.html
+++ b/index.html
@@ -79,7 +79,19 @@
                 </div>
             </div>
         </div>
-
+            <!--AI-Stock Analyzer-->
+            <div class="project">
+                <img src="https://github.com/user-attachments/assets/f82f29ed-5929-4954-879e-e1582b0dd1a0" alt="AI-Stock Analyzer">
+                <div class="project-content">
+                    <h3><a href="https://github.com/harshitv804/AI-Stock-Analyzer">Time Series Forecasting LSTM Streamlit</a></h3>
+                    <p>AI-Stock-Analyzer is a generative AI webapp for performing fundamental analysis of the NSE stock market data. This project was developed using Streamlit LangChain and Gemini Flash LLM. Used selenium python to webscrape screencer website for stock data and to create API. 
+                    </p>
+                    <div class="links">
+                    <a href="https://github.com/harshitv804/AI-Stock-Analyzer">Source Code</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="go-top">
             <a href="#">Go to Top ⬆️</a>
         </div>
