--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,21 +9,30 @@
     <link rel="icon" href="https://i.postimg.cc/Z5ZzHh8c/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <!--Hero Section-->
         <div class="header">
             <div class="profile-pic">
-                <img src="https://media.licdn.com/dms/image/v2/D5603AQHmbbCSKGxPHQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1709232924938?e=2147483647&v=beta&t=7t7e3SaieUP_FWVZ_1KiHmuyyAlKGbqiuf_V8t2jsMg" alt="Harshit V">
+                <img src="https://media.licdn.com/dms/image/v2/D5603AQHmbbCSKGxPHQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1709232924938?e=2147483647&v=beta&t=7t7e3SaieUP_FWVZ_1KiHmuyyAlKGbqiuf_V8t2jsMg"
+                    alt="Harshit V">
             </div>
             <div class="header-content">
                 <h1>Harshit V</h1>
-                <p>I'm a Tech enthusiast skilled in Generative AI, Machine Learning, and WordPress development. I love developing projects and becoming a mid-polymath is the end-goal of my life I guess.</p><br>
-                <p>Previously Interned at <a href="https://gameplantribe.com/" style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as WordPress Freelancer, <a href="https://www.pragrobotics.com/" style="text-decoration: underline;text-decoration-color: orange;">Prag Robotics</a> as Machine Learning Engineer. I did my B.Tech in AI/ML at <a href="https://srmrmp.edu.in/" style="text-decoration: underline;text-decoration-color: orange;">SRM University</a> Ramapuram, Chennai.</p>
+                <p>I'm a Tech enthusiast skilled in Generative AI, Machine Learning, and WordPress development. I love
+                    developing projects and becoming a mid-polymath is the end-goal of my life I guess.</p><br>
+                <p>Previously Interned at <a href="https://gameplantribe.com/"
+                        style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as
+                    WordPress Freelancer, <a href="https://www.pragrobotics.com/"
+                        style="text-decoration: underline;text-decoration-color: orange;">Prag Robotics</a> as Machine
+                    Learning Engineer. I did my B.Tech in AI/ML at <a href="https://srmrmp.edu.in/"
+                        style="text-decoration: underline;text-decoration-color: orange;">SRM University</a> Ramapuram,
+                    Chennai.</p>
                 <div class="links">
                     <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> /
-                    <a href="https://www.linkedin.com/in/harshitv804/">LinkedIn</a> / 
-                    <a href="https://huggingface.co/harshitv804">HuggingFace</a> / 
+                    <a href="https://www.linkedin.com/in/harshitv804/">LinkedIn</a> /
+                    <a href="https://huggingface.co/harshitv804">HuggingFace</a> /
                     <a href="https://github.com/harshitv804">Github</a>
                 </div>
             </div>
@@ -30,63 +40,115 @@
 
         <div class="portfolio">
             <h2>Portfolio</h2>
-            <p>I'm interested in training deep learning models, solving real-world problems with generative AI, and developing useful Full Stack web apps.</p>
+            <p>I'm interested in training deep learning models, solving real-world problems with generative AI, and
+                developing useful Full Stack web apps.</p>
             <!--LawGPT-->
             <div class="project">
-                <img src="https://github.com/harshitv804/LawGPT/assets/100853494/ecff5d3c-f105-4ba2-a93a-500282f0bf00" alt="LawGPT">
+                <img src="https://github.com/harshitv804/LawGPT/assets/100853494/ecff5d3c-f105-4ba2-a93a-500282f0bf00"
+                    alt="LawGPT">
                 <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/LawGPT">LawGPT: RAG based Generative AI Attorney Chatbot</a></h3>
-                    <p>LawGPT is an AI attorney chatbot built with Streamlit, LangChain, and TogetherAI, trained on Indian Penal Code (IPC) data. Ask any legal questions, and it will provide accurate justice based on the IPC.</p>
+                    <h3><a href="https://github.com/harshitv804/LawGPT">LawGPT: RAG based Generative AI Attorney
+                            Chatbot</a></h3>
+                    <div class="tags-container">
+                        <div class="tag">RAG</div>
+                        <div class="tag">LangChain</div>
+                        <div class="tag">Streamlit</div>
+                        <div class="tag">Python</div>
+                    </div>
+                    <p>LawGPT is an AI attorney chatbot built with Streamlit, LangChain, and TogetherAI, trained on
+                        Indian Penal Code (IPC) data. Ask any legal questions, and it will provide accurate justice
+                        based on the IPC.</p>
                     <div class="links">
-                        <a href="https://github.com/harshitv804/LawGPT">Source Code</a> / <a href="https://huggingface.co/spaces/harshitv804/LawGPT">Demo</a>
+                        <a href="https://github.com/harshitv804/LawGPT">Source Code</a> / <a
+                            href="https://huggingface.co/spaces/harshitv804/LawGPT">Demo</a>
                     </div>
                 </div>
             </div>
             <!--RAGless-->
             <div class="project">
-                <img src="https://github.com/harshitv804/RAG-without-Vector-DB/assets/100853494/cebecf35-bdd6-459c-8a1e-bad7c9a8037b" alt="RAGLess">
+                <img src="https://github.com/harshitv804/RAG-without-Vector-DB/assets/100853494/cebecf35-bdd6-459c-8a1e-bad7c9a8037b"
+                    alt="RAGLess">
                 <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/RAG-without-Vector-DB">RAG without Vector-DB? - Yes</a></h3>
-                    <p>This project breaks away from traditional methods using embeddings and vector databases by employing a TF-IDF retriever, long context reordering, and a flash reranker. This approach improves retrieval speed with k=8 while maintaining accuracy comparable to vector databases.
+                    <h3><a href="https://github.com/harshitv804/RAG-without-Vector-DB">RAG without Vector-DB? - Yes</a>
+                    </h3>
+                    <div class="tags-container">
+                        <div class="tag">RAG</div>
+                        <div class="tag">LangChain</div>
+                        <div class="tag">Streamlit</div>
+                        <div class="tag">Python</div>
+                    </div>
+                    <p>This project breaks away from traditional methods using embeddings and vector databases by
+                        employing a TF-IDF retriever, long context reordering, and a flash reranker. This approach
+                        improves retrieval speed with k=8 while maintaining accuracy comparable to vector databases.
                     </p>
                     <div class="links">
-                    <a href="https://github.com/harshitv804/RAG-without-Vector-DB">Source Code</a>
+                        <a href="https://github.com/harshitv804/RAG-without-Vector-DB">Source Code</a>
                     </div>
                 </div>
             </div>
             <!--MedChat-->
             <div class="project">
-                <img src="https://github.com/harshitv804/MedChat/assets/100853494/86b9efcc-32cd-42ae-a2ce-90e5c6c0401e" alt="MedChat">
+                <img src="https://github.com/harshitv804/MedChat/assets/100853494/86b9efcc-32cd-42ae-a2ce-90e5c6c0401e"
+                    alt="MedChat">
                 <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/MedChat">MedChat - RAG based AI Chatbot for 🇮🇳 Medicines</a></h3>
-                    <p>MedChat is a RAG-based AI chatbot for inquiries about Indian medicines. Built with Streamlit, LangChain, and Mistral LLM, it uses open web data on Indian medicines to provide accurate responses to user questions about medications.
+                    <h3><a href="https://github.com/harshitv804/MedChat">MedChat - RAG based AI Chatbot for 🇮🇳
+                            Medicines</a></h3>
+                    <div class="tags-container">
+                        <div class="tag">RAG</div>
+                        <div class="tag">LangChain</div>
+                        <div class="tag">Streamlit</div>
+                        <div class="tag">Python</div>
+                    </div>
+                    <p>MedChat is a RAG-based AI chatbot for inquiries about Indian medicines. Built with Streamlit,
+                        LangChain, and Mistral LLM, it uses open web data on Indian medicines to provide accurate
+                        responses to user questions about medications.
                     </p>
                     <div class="links">
-                    <a href="https://github.com/harshitv804/MedChat">Source Code</a> / <a href="https://huggingface.co/spaces/harshitv804/MedChat">Demo</a>
+                        <a href="https://github.com/harshitv804/MedChat">Source Code</a> / <a
+                            href="https://huggingface.co/spaces/harshitv804/MedChat">Demo</a>
                     </div>
                 </div>
             </div>
             <!--LSTM-->
             <div class="project">
-                <img src="https://github.com/user-attachments/assets/e722059e-02e6-441e-8bbc-69c79bbddcd3" alt="Time Series LSTM">
+                <img src="https://github.com/user-attachments/assets/e722059e-02e6-441e-8bbc-69c79bbddcd3"
+                    alt="Time Series LSTM">
                 <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/Time-Series-Forecasting-LSTM-Streamlit">Time Series Forecasting LSTM Streamlit</a></h3>
-                    <p>Time Series Forecasting based on Streamlit GUI. Featuring pre-built data processing, correlation visualization, and customizable models, it supports both univariate and multivariate forecasts. Supports customizable LSTM features and interactive Plotly graphs.
+                    <h3><a href="https://github.com/harshitv804/Time-Series-Forecasting-LSTM-Streamlit">Time Series
+                            Forecasting LSTM Streamlit</a></h3>
+                    <div class="tags-container">
+                        <div class="tag">LSTM</div>
+                        <div class="tag">Pytorch</div>
+                        <div class="tag">Streamlit</div>
+                        <div class="tag">Python</div>
+                    </div>
+                    <p>Time Series Forecasting based on Streamlit GUI. Featuring pre-built data processing, correlation
+                        visualization, and customizable models, it supports both univariate and multivariate forecasts.
+                        Supports customizable LSTM features and interactive Plotly graphs.
                     </p>
                     <div class="links">
-                    <a href="https://github.com/harshitv804/Time-Series-Forecasting-LSTM-Streamlit">Source Code</a>
+                        <a href="https://github.com/harshitv804/Time-Series-Forecasting-LSTM-Streamlit">Source Code</a>
                     </div>
                 </div>
             </div>
             <!--AI-Stock Analyzer-->
             <div class="project">
-                <img src="https://github.com/user-attachments/assets/f82f29ed-5929-4954-879e-e1582b0dd1a0" alt="AI-Stock Analyzer">
+                <img src="https://github.com/user-attachments/assets/f82f29ed-5929-4954-879e-e1582b0dd1a0"
+                    alt="AI-Stock Analyzer">
                 <div class="project-content">
                     <h3><a href="https://github.com/harshitv804/AI-Stock-Analyzer">AI-Stock Analyzer</a></h3>
-                    <p>AI-Stock-Analyzer is a generative AI webapp for performing fundamental analysis of the NSE stock market data. This project was developed using Streamlit LangChain and Gemini Flash LLM. Used selenium python to webscrape screencer website for stock data and to create API. 
+                    <div class="tags-container">
+                        <div class="tag">LangChain</div>
+                        <div class="tag">ScreenerAPI</div>
+                        <div class="tag">Streamlit</div>
+                        <div class="tag">Python</div>
+                    </div>
+                    <p>AI-Stock-Analyzer is a generative AI webapp for performing fundamental analysis of the NSE stock
+                        market data. This project was developed using Streamlit LangChain and Gemini Flash LLM. Used
+                        selenium python to webscrape screencer website for stock data and to create API.
                     </p>
                     <div class="links">
-                    <a href="https://github.com/harshitv804/AI-Stock-Analyzer">Source Code</a>
+                        <a href="https://github.com/harshitv804/AI-Stock-Analyzer">Source Code</a>
                     </div>
                 </div>
             </div>
@@ -96,4 +158,5 @@
         </div>
     </div>
 </body>
+    
 </html>
