--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Learning Engineer. I did my B.Tech in AI/ML at <a href="https://srmrmp.edu.in/"
                         style="text-decoration: underline;text-decoration-color: orange;">SRM University</a>,
                     Chennai.</p>
-                <div class="links">
+                <div class="social-links">
                     <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> /
                     <a href="https://www.linkedin.com/in/harshitv804/">LinkedIn</a> /
                     <a href="https://huggingface.co/harshitv804">HuggingFace</a> /
