--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <p>LawGPT is an AI attorney chatbot built with Streamlit, LangChain, and TogetherAI, trained on
                         Indian Penal Code (IPC) data. Ask any legal questions, and it will provide accurate justice
-                        based on the IPC.</p>
+                        based on the IPC.</p><br>
                     <div class="links">
                         <a href="https://github.com/harshitv804/LawGPT">Source Code</a> / <a
                             href="https://huggingface.co/spaces/harshitv804/LawGPT">Demo</a>
