--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         style="text-decoration: underline;text-decoration-color: orange;">Prag Robotics</a> as Machine
                     Learning Engineer. I did my B.Tech in AI/ML at <a href="https://srmrmp.edu.in/"
                         style="text-decoration: underline;text-decoration-color: orange;">SRM University</a>,
-                    Chennai.</p>
+                    Chennai.</p><br>
                 <div class="social-links">
                     <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> /
                     <a href="https://www.linkedin.com/in/harshitv804/">LinkedIn</a> /
@@ -57,7 +57,7 @@
                     </div>
                     <p>LawGPT is an AI attorney chatbot built with Streamlit, LangChain, and TogetherAI, trained on
                         Indian Penal Code (IPC) data. Ask any legal questions, and it will provide accurate justice
-                        based on the IPC.</p><br>
+                        based on the IPC.</p>
                     <div class="links">
                         <a href="https://github.com/harshitv804/LawGPT">Source Code</a> / <a
                             href="https://huggingface.co/spaces/harshitv804/LawGPT">Demo</a>
