--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harshit V</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://i.postimg.cc/Z5ZzHh8c/favicon.png" type="image/x-icon">
+    <link rel="icon" href="https://i.postimg.cc/nLZN7KWx/android-chrome-512x512.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
