--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header-content">
                 <h1>Harshit V</h1>
                 <p>I'm a Tech enthusiast skilled in Generative AI, Machine Learning, and WordPress development. I love
-                    developing projects and becoming a generalist and a powerful background character is the end goal of my life I guess.</p><br>
+                   to build and ship software, becoming a generalist and a powerful background character is the end goal of my life.</p><br>
                 <p>Previously Interned at <a href="https://gameplantribe.com/"
                         style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as
                     WordPress Freelancer, <a href="https://www.pragrobotics.com/"
