--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             </div>
             <div class="header-content">
                 <h1>Harshit V</h1>
-                <p>I'm a Tech enthusiast skilled in Generative AI, Machine Learning, and WordPress development. I love
-                   to build and ship software, becoming a generalist and a powerful background character is the end goal of my life.</p><br>
+                <p>I'm a Tech enthusiast 💻 skilled in Generative AI 🤖, Machine Learning 📊, and WordPress development 🌐. I love to build and ship software 🚀; becoming a generalist 🌟 and a powerful background character 🎭 is the end goal of my life.</p><br>
                 <p>Previously Interned at <a href="https://gameplantribe.com/"
                         style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as
                     WordPress Freelancer, <a href="https://www.pragrobotics.com/"
@@ -36,125 +35,6 @@
                     <a href="https://github.com/harshitv804">Github</a>
                 </div>
             </div>
-        </div>
-
-        <div class="portfolio">
-            <h2>Portfolio</h2>
-            <p>I'm interested in training deep learning models, solving real-world problems with generative AI, and
-                developing useful Full Stack web apps.</p>
-            <!--LawGPT-->
-            <div class="project">
-                <img src="https://github.com/harshitv804/LawGPT/assets/100853494/ecff5d3c-f105-4ba2-a93a-500282f0bf00"
-                    alt="LawGPT">
-                <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/LawGPT">LawGPT: RAG based Generative AI Attorney
-                            Chatbot</a></h3>
-                    <div class="tags-container">
-                        <div class="tag">RAG</div>
-                        <div class="tag">LangChain</div>
-                        <div class="tag">Streamlit</div>
-                        <div class="tag">Python</div>
-                    </div>
-                    <p>LawGPT is an AI attorney chatbot built with Streamlit, LangChain, and TogetherAI, trained on
-                        Indian Penal Code (IPC) data. Ask any legal questions, and it will provide accurate justice
-                        based on the IPC.</p>
-                    <div class="links">
-                        <a href="https://github.com/harshitv804/LawGPT">Source Code</a> / <a
-                            href="https://huggingface.co/spaces/harshitv804/LawGPT">Demo</a>
-                    </div>
-                </div>
-            </div>
-            <!--RAGless-->
-            <div class="project">
-                <img src="https://github.com/harshitv804/RAG-without-Vector-DB/assets/100853494/cebecf35-bdd6-459c-8a1e-bad7c9a8037b"
-                    alt="RAGLess">
-                <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/RAG-without-Vector-DB">RAG without Vector-DB? - Yes</a>
-                    </h3>
-                    <div class="tags-container">
-                        <div class="tag">RAG</div>
-                        <div class="tag">LangChain</div>
-                        <div class="tag">Streamlit</div>
-                        <div class="tag">Python</div>
-                    </div>
-                    <p>This project breaks away from traditional methods using embeddings and vector databases by
-                        employing a TF-IDF retriever, long context reordering, and a flash reranker. This approach
-                        improves retrieval speed with k=8 while maintaining accuracy comparable to vector databases.
-                    </p>
-                    <div class="links">
-                        <a href="https://github.com/harshitv804/RAG-without-Vector-DB">Source Code</a>
-                    </div>
-                </div>
-            </div>
-            <!--MedChat-->
-            <div class="project">
-                <img src="https://github.com/harshitv804/MedChat/assets/100853494/86b9efcc-32cd-42ae-a2ce-90e5c6c0401e"
-                    alt="MedChat">
-                <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/MedChat">MedChat - RAG based AI Chatbot for 🇮🇳
-                            Medicines</a></h3>
-                    <div class="tags-container">
-                        <div class="tag">RAG</div>
-                        <div class="tag">LangChain</div>
-                        <div class="tag">Streamlit</div>
-                        <div class="tag">Python</div>
-                    </div>
-                    <p>MedChat is a RAG-based AI chatbot for inquiries about Indian medicines. Built with Streamlit,
-                        LangChain, and Mistral LLM, it uses open web data on Indian medicines to provide accurate
-                        responses to user questions about medications.
-                    </p>
-                    <div class="links">
-                        <a href="https://github.com/harshitv804/MedChat">Source Code</a> / <a
-                            href="https://huggingface.co/spaces/harshitv804/MedChat">Demo</a>
-                    </div>
-                </div>
-            </div>
-            <!--LSTM-->
-            <div class="project">
-                <img src="https://github.com/user-attachments/assets/e722059e-02e6-441e-8bbc-69c79bbddcd3"
-                    alt="Time Series LSTM">
-                <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/Time-Series-Forecasting-LSTM-Streamlit">Time Series
-                            Forecasting LSTM Streamlit</a></h3>
-                    <div class="tags-container">
-                        <div class="tag">LSTM</div>
-                        <div class="tag">Pytorch</div>
-                        <div class="tag">Streamlit</div>
-                        <div class="tag">Python</div>
-                    </div>
-                    <p>Time Series Forecasting based on Streamlit GUI. Featuring pre-built data processing, correlation
-                        visualization, and customizable models, it supports both univariate and multivariate forecasts.
-                        Supports customizable LSTM features and interactive Plotly graphs.
-                    </p>
-                    <div class="links">
-                        <a href="https://github.com/harshitv804/Time-Series-Forecasting-LSTM-Streamlit">Source Code</a>
-                    </div>
-                </div>
-            </div>
-            <!--AI-Stock Analyzer-->
-            <div class="project">
-                <img src="https://github.com/user-attachments/assets/f82f29ed-5929-4954-879e-e1582b0dd1a0"
-                    alt="AI-Stock Analyzer">
-                <div class="project-content">
-                    <h3><a href="https://github.com/harshitv804/AI-Stock-Analyzer">AI-Stock Analyzer</a></h3>
-                    <div class="tags-container">
-                        <div class="tag">LangChain</div>
-                        <div class="tag">ScreenerAPI</div>
-                        <div class="tag">Streamlit</div>
-                        <div class="tag">Python</div>
-                    </div>
-                    <p>AI-Stock-Analyzer is a generative AI webapp for performing fundamental analysis of the NSE stock
-                        market data. This project was developed using Streamlit LangChain and Gemini Flash LLM. Used
-                        selenium python to webscrape screencer website for stock data and to create API.
-                    </p>
-                    <div class="links">
-                        <a href="https://github.com/harshitv804/AI-Stock-Analyzer">Source Code</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="go-top">
-            <a href="#">Go to Top ⬆️</a>
         </div>
     </div>
 </body>
