--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--Hero Section-->
         <div class="header">
             <div class="profile-pic">
-                <img src="https://media.licdn.com/dms/image/v2/D5603AQHmbbCSKGxPHQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1709232924938?e=2147483647&v=beta&t=7t7e3SaieUP_FWVZ_1KiHmuyyAlKGbqiuf_V8t2jsMg"
+                <img src="https://avatars.githubusercontent.com/u/100853494?v=4"
                     alt="Harshit V">
             </div>
             <div class="header-content">
