--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="header-content">
                 <h1>Harshit V</h1>
-                <p>I'm a Tech enthusiast 💻 skilled in Generative AI 🤖, Machine Learning 📊, and WordPress development 🌐. I love to build and ship software 🚀; becoming a generalist 🌟 and a powerful background character 🎭 is the end goal of my life.</p><br>
+                <p>I'm a Tech enthusiast 💻 skilled in Generative AI 🤖, WordPress development 🌐. I like to train AI models and build software 🚀; becoming a generalist 🌟 is the end goal of my life.</p><br>
                 <p>Previously Interned at <a href="https://gameplantribe.com/"
                         style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as
                     WordPress Freelancer, <a href="https://www.pragrobotics.com/"
