--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
             </div>
             <div class="header-content">
                 <h1>Harshit V</h1>
-                <p>I'm a Tech enthusiast 💻 skilled in Generative AI 🤖, WordPress development 🌐. I like to train AI models and build software 🚀; becoming a generalist 🌟 is the end goal of my life.</p><br>
-                <p>Previously Interned at <a href="https://gameplantribe.com/"
-                        style="text-decoration: underline;text-decoration-color: orange;">Game Plan Tribe</a> as
-                    WordPress Freelancer, <a href="https://www.pragrobotics.com/"
-                        style="text-decoration: underline;text-decoration-color: orange;">Prag Robotics</a> as Machine
-                    Learning Engineer. I did my B.Tech in AI/ML at <a href="https://srmrmp.edu.in/"
-                        style="text-decoration: underline;text-decoration-color: orange;">SRM University</a>,
-                    Chennai.</p><br>
+                <p>I'm a Tech enthusiast 💻 skilled in Generative AI 🤖, WordPress development 🌐. I like to train AI models and build software 🚀; becoming a generalist 🌟 is the end goal of my life.</p><br><br>
                 <div class="social-links">
                     <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> /
                     <a href="https://www.linkedin.com/in/harshitv804/">LinkedIn</a> /
@@ -40,3 +33,4 @@
 </body>
     
 </html>
+
