--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="header-content">
                 <h1>Harshit V</h1>
-                <p>I'm a Tech enthusiast 💻 skilled in Generative AI 🤖, WordPress development 🌐. I like to train AI models and build software 🚀; becoming a generalist 🌟 is the end goal of my life.</p><br><br>
+                <p>I'm a Tech enthusiast 💻 skilled in Generative AI 🤖, WordPress development 🌐. I like to train AI models and build software 🚀; becoming a generalist 🌟 is the end goal of my life.</p><br>
                 <div class="social-links">
                     <a href="mailto:harshitvenkatesan88@gmail.com">Email</a> /
                     <a href="https://www.linkedin.com/in/harshitv804/">LinkedIn</a> /
@@ -33,4 +33,5 @@
 </body>
     
 </html>
+
 
